BSD fixes #386: Add text wrap balance to avoid orphans and widows.

--- a/stories/assets/styles/global/global.scss
+++ b/stories/assets/styles/global/global.scss
@@ -73,6 +73,7 @@ h6 {
   line-height: 1.2;
   margin: 0;
   transition: font-size 0.25s;
+  text-wrap-style: balance;
 }
 
 h1 {
